--- a/html/widget-chart-settings.html
+++ b/html/widget-chart-settings.html
@@ -12,7 +12,7 @@
         <link href="../combobox/bootstrap-combobox.css" rel="stylesheet">
             <!-- Loading project css -->
     <link href="../css/control-panels-styles.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script><!-- Combobox script -->
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
 
 <body>
@@ -51,7 +51,22 @@
       <option value="CT">humidity</option>
       <option value="NY">speed</option>
       <option value="MD">dist</option>
+      <option value="VA">wind_speed</option>
+      <option value="VA">volume</option>
+      <option value="VA">current_song</option>
+      <option value="VA">light_guestroom</option>
+      <option value="VA">light_bedroom</option>
+      <option value="VA">fireworks</option>
+      <option value="VA">beer_temperature</option>
+      <option value="VA">fridge_mode</option>
+      <option value="VA">choice</option>
       <option value="VA">color</option>
+      <option value="VA">door_indicator</option>
+      <option value="VA">movement</option>
+      <option value="VA">light_mode</option>
+      <option value="VA">message</option>
+      <option value="VA">order</option>
+      <option value="VA">mood</option>
     </select>
 
     <script type="text/javascript">
