--- a/html/controlpanel.html
+++ b/html/controlpanel.html
@@ -9,7 +9,14 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Loading Flat UI -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
+    <!-- Loading bootstrap-switch -->
+    <link href="../bootstrap-switch/bootstrap-switch.css" rel="stylesheet">
+      <link href="../bootstrap-slider/bootstrap-slider.css" rel="stylesheet">
     <link href="../css/styles.css" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+      <script src="../bootstrap-switch/bootstrap-switch.js" ></script>
+      <script src="../bootstrap-slider/bootstrap-slider.js" ></script>
+
 <body>
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
@@ -50,31 +57,75 @@
     </div>
   </div>
     <div class="panels">
-      <a href="#" class="longwidget">
+      <a href="widget-chart-settings.html" class="longwidget">
         <h2>chart</h2>
       </a>
       <a href="#" class="widget">
         <h5>gauge</h5>
       </a>
       <a href="#" class="widget">
-        <h5>widget</h5>
+        <div class="widget-head">
+        <h5>String</h5>
+        <h4 id="string_value">run</h4>
+      </div>
+      <div class="widget-body">
+      <input class="form-control">
+
+    </div>
+    <div class="widget-footer">
+      <p> 4:25pm 6/20</p>
+    </div>
       </a>
       <a href="#" class="widget">
-        <h5>string</h5>
+        <div class="widget-head">
+        <h5>Slider</h5>
+        <h4 id="slider_value">45</h4>
+      </div>
+      <div class="widget-body">
+      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-value="45"/>
+      <script type="text/javascript">
+      $('#ex1').slider({
+formatter: function(value) {
+  return 'Current value: ' + value;
+}
+});
+</script>
+    </div>
+    <div class="widget-footer">
+      <p> 4:25pm 6/20</p>
+    </div>
       </a>
       <a href="#" class="widget">
-        <h5>slider</h5>
+        <h5>number</h5>
       </a>
       <a href="#" class="widget">
-        <h5>other widget</h5>
-      </a>
-      <a href="#" class="widget">
-        <h5>switch</h5>
+        <div class="widget-head">
+        <h5>Switch</h5>
+        <h4 id="switch_value">On</h4>
+      </div>
+      <div class="widget-body">
+      <input type="checkbox" id="checkbox-toggle" name="my-checkbox" checked>
+      <script type="text/javascript">
+        $("[name='my-checkbox']").bootstrapSwitch();
+        $("[name='my-checkbox']").click(function() {
+          if($("[name='my-checkbox']").is(":checked")){
+            $("#status").html("sending: On");
+            console.log("On");
+          } else {
+            $("#status").html("sending: Off");
+          }
+        });
+
+      </script>
+    </div>
+    <div class="widget-footer">
+      <p>6/20/2016</p>
+    </div>
       </a>
     </div>
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/flat-ui.js"></script>
