--- a/html/widget-chart-settings.html
+++ b/html/widget-chart-settings.html
@@ -9,7 +9,7 @@
     <!-- Loading Flat UI -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
         <!-- Loading Combobox  -->
-        
+
     <link href="../css/control-panels-styles.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
@@ -38,12 +38,19 @@
   </div>
   <div class="content">
     <h1>Widget settings</h1>
-    <div class="setting">
+    <div class="widget-setting-group">
+    <div class="widget-setting-label">
       <p> Widget name</p>
+    </div>
+    <div class="widget-setting">
       <input class="form-control">
     </div>
-    <div class="setting">
+  </div>
+      <div class="widget-setting-group">
+        <div class="widget-setting-label">
       <p>Variables</p>
+    </div>
+    <div class="widget-setting">
       <select class="combobox">
       <option></option>
       <option value="PA">current_temp</option>
@@ -67,9 +74,10 @@
       <option value="VA">order</option>
       <option value="VA">mood</option>
     </select>
+  </div>
+</div>
 
-
-    </div>
+    
       <div class="special">
 
 </div>
