--- a/html/edit-controlpanel.html
+++ b/html/edit-controlpanel.html
@@ -52,24 +52,27 @@
     <div class="panels">
       <a href="#" class="longwidget">
         <input class="form-control" placeholder="Chart">
+        <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
       <a href="#" class="widget">
         <input class="form-control" placeholder="Gauge">
-      </a>
-      <a href="#" class="widget">
-        <input class="form-control" placeholder="Widget">
+              <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
       <a href="#" class="widget">
         <input class="form-control" placeholder="String">
+            <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
       <a href="#" class="widget">
         <input class="form-control" placeholder="Slider">
+              <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
       <a href="#" class="widget">
-        <input class="form-control" placeholder="Other widget">
+        <input class="form-control" placeholder="Number">
+              <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
       <a href="#" class="widget">
         <input class="form-control" placeholder="Switch">
+            <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
     </div>
   </div>
