--- a/html/widget-slider-settings.html
+++ b/html/widget-slider-settings.html
@@ -8,8 +8,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Loading Flat UI -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
-    <link href="control-panels-styles.css" rel="stylesheet">
-
+    <link href="../css/control-panels-styles.css" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <body>
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
@@ -34,50 +34,63 @@
   </div>
   <div class="content">
     <h1>Widget settings</h1>
-    <div class="form-group">
-      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Widget name">
+    <div class="widget-setting-group">
+    <div class="widget-setting-label">
+      <p> Widget name</p>
     </div>
-    <div class="variables">
-      <h2>Variables</h2>
-      <div class="variable">
-        <h3>Home</h3>
-        <p>current_temp</p>
-        <p>light</p>
-        <p>door_indicator</p>
-        </div>
-        <div class="variable">
-          <h3>Garage</h3>
-          <p>volume</p>
-          <p>door_indicator</p>
-          <p>movement</p>
-          </div>
-          <div class="variable">
-            <h3>Meteorological station</h3>
-            <p>current_temp</p>
-            <p>humidity</p>
-            <p>wind_speed</p>
-              <p>wind_direction</p>
-              <p>pressure</p>
-            </div>
-            <div class="variable">
-              <h3>Test Device</h3>
-              <p>light_picker</p>
-              <p>sound_recorder</p>
-              <p>note_taker</p>
-              <p>field_recorder</p>
-              </div>
-
-      </div>
-      <div class="special">
-    <div class="range-selector">
-    <p>Range: from </p>
-    <input class="form-control">
-    <p> to </p>
+    <div class="widget-setting">
+      <input class="form-control">
+    </div>
+  </div>
+      <div class="widget-setting-group">
+        <div class="widget-setting-label">
+      <p>Variables</p>
+    </div>
+    <div class="widget-setting">
+      <select class="combobox">
+      <option></option>
+      <option value="PA">current_temp</option>
+      <option value="CT">humidity</option>
+      <option value="NY">speed</option>
+      <option value="MD">dist</option>
+      <option value="VA">wind_speed</option>
+      <option value="VA">volume</option>
+      <option value="VA">current_song</option>
+      <option value="VA">light_guestroom</option>
+      <option value="VA">light_bedroom</option>
+      <option value="VA">fireworks</option>
+      <option value="VA">beer_temperature</option>
+      <option value="VA">fridge_mode</option>
+      <option value="VA">choice</option>
+      <option value="VA">color</option>
+      <option value="VA">door_indicator</option>
+      <option value="VA">movement</option>
+      <option value="VA">light_mode</option>
+      <option value="VA">message</option>
+      <option value="VA">order</option>
+      <option value="VA">mood</option>
+    </select>
+  </div>
+  </div>
+    <div class="special">
+  <div class="widget-setting-group">
+      <div class="widget-setting-label">
+        <p>Min Value </p>
+    </div>
+    <div class="widget-setting">
     <input class="form-control">
   </div>
-
+</div>
+<div class="widget-setting-group">
+    <div class="widget-setting-label">
+      <p>Max Value </p>
+  </div>
+  <div class="widget-setting">
+  <input class="form-control">
+</div>
 </div>
 
+</div>
 
 <a href="controlpanel.html"
   <button type="button" class="btn btn-success">Save</button>
