--- a/html/controlpanel.html
+++ b/html/controlpanel.html
@@ -33,8 +33,7 @@
           <li><a href="#contact">Docs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li ><a href="./">Login</a></li>
-          <li><a href="../navbar-fixed-top/">Register</a></li>
+          <li ><a href="profile.html">Anton Eremin</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
