--- a/html/controlpanels.html
+++ b/html/controlpanels.html
@@ -26,45 +26,57 @@
           <li><a href="#contact">Docs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li ><a href="./">Login</a></li>
-          <li><a href="../navbar-fixed-top/">Register</a></li>
+          <li ><a href="profile.html">Anton Eremin</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
     <div class="content">
-    <h1>Control panels</h1>
-    <div class="panels">
-      <a href="new-control-panel.html" class="panel">
-        <h2>+</h2>
+      <div class="bar">
+        <a href="controlpanels.html">
+        <button type="button" class="btn btn-primary no-show">Back</button>
       </a>
+        <div class="title">
+      <h1>Control Panels</h1>
+    </div>
+      <div class="control-buttons">
+        <a href="new-control-panel.html">
+        <button type="button" class="btn btn-primary "> New Control Panel</button>
+      </a>
+      <a href="edit-controlpanels.html">
+        <button type="button" class="btn btn-primary">Edit</button>
+      </a>
+      </div>
+    </div>
+    <div class="panels">
+
       <a href="controlpanel.html" class="panel">
         <h5>Sample Control Panel</h5>
-        <h6>3/12/2016</h6>
+        <p>3/12/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Garage</h5>
-        <h6>4/05/2016</h6>
+        <p>4/05/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Countryhouse</h5>
-        <h6>1/23/2015</h6>
+        <p>1/23/2015</p>
       </a>
       <a href="#" class="panel">
         <h5>Brewery</h5>
-        <h6>2/14/2016</h6>
+        <p>2/14/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Treehouse</h5>
-        <h6>2/15/2016</h6>
+        <p>2/15/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Dogsuit</h5>
-        <h6>4/16/2016</h6>
+        <p>4/16/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Catsuit</h5>
-        <h6>5/14/2016</h6>
+        <p>5/14/2016</p>
       </a>
     </div>
   </div>
