--- a/html/widget-string-settings.html
+++ b/html/widget-string-settings.html
@@ -33,13 +33,31 @@
     </div>
   </div>
   <div class="content">
-    <h1>Widget settings</h1>
+    <div class="bar">
+      <a href="new-widget.html">
+      <button type="button" class="btn btn-primary">Back</button>
+    </a>
+      <div class="title">
+    <h1>String settings</h1>
+  </div>
+    <div class="control-buttons">
+      <a href="new-widget.html">
+      <button type="button" class="btn btn-primary no-show">Add Widget</button>
+    </a>
+    <a href="edit-controlpanel.html"
+      <button type="button" class="btn btn-primary no-visible">Edit</button>
+    </a>
+    </div>
+  </div>
     <div class="widget-setting-group">
     <div class="widget-setting-label">
       <p> Widget name</p>
     </div>
     <div class="widget-setting">
       <input class="form-control">
+    </div>
+    <div class="right-setting">
+      <p> Widget name</p>
     </div>
   </div>
       <div class="widget-setting-group">
@@ -70,6 +88,9 @@
       <option value="VA">order</option>
       <option value="VA">mood</option>
     </select>
+  </div>
+  <div class="right-setting">
+    <p> Variables</p>
   </div>
   </div>
 
