--- a/html/device.html
+++ b/html/device.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Devices</title>
+    <title>Cloud4RPI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Loading Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Loading Flat UI -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
     <link href="../css/control-panels-styles.css" rel="stylesheet">
-
+      <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <body>
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
@@ -21,7 +21,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li ><a href="controlpanels.html">Control Panels</a></li>
+          <li><a href="controlpanels.html">Control Panels</a></li>
           <li class="active"><a href="devices.html">Devices</a></li>
           <li><a href="#contact">Docs</a></li>
         </ul>
@@ -31,60 +31,53 @@
       </div><!--/.nav-collapse -->
     </div>
   </div>
-    <div class="content">
-      <div class="bar">
-        <a href="controlpanels.html">
-        <button type="button" class="btn btn-primary no-show">Back</button>
-      </a>
-        <div class="title">
-      <h1>Devices</h1>
-    </div>
-      <div class="control-buttons">
-        <a href="new-device.html">
-        <button type="button" class="btn btn-primary">New Device</button>
-      </a>
-      <a href="edit-devices.html"
-        <button type="button" class="btn btn-primary">Edit</button>
-      </a>
-      </div>
-    </div>
-    <div class="panels">
-      <a href="device.html" class="panel">
-        <h5>Sample Device</h5>
-        <p>4/5/2016</p>
-      </a>
-      <a href="#" class="panel">
-        <h5>Garage Unit</h5>
-        <p>4/05/2016</p>
-      </a>
-      <a href="#" class="panel">
-        <h5>Home Unit</h5>
-        <p>2/5/2016</p>
-      </a>
-      <a href="#" class="panel">
-        <h5>Brewery</h5>
-        <p>2/5/2016</p>
-      </a>
-      <a href="#" class="panel">
-        <h5>Test unit</h5>
-        <p>2/5/2016</p>
-      </a>
-      <a href="#" class="panel">
-        <h5>Meteorological Station</h5>
-        <p>7/11/2016</p>
-      </a>
-      <a href="#" class="panel">
-        <h5>Security Unit</h5>
-        <p>3/18/2016</p>
-      </a>
+  <div class="content">
+    <div class="bar">
+      <a href="devices.html">
+      <button type="button" class="btn btn-primary">Back</button>
+    </a>
+      <div class="title">
+    <h1>Device settings</h1>
+  </div>
+    <div class="control-buttons">
+      <a href="new-widget.html">
+      <button type="button" class="btn btn-primary no-show">Add Widget</button>
+    </a>
+    <a href="edit-controlpanel.html"
+      <button type="button" class="btn btn-primary no-visible">Edit</button>
+    </a>
     </div>
   </div>
-</body>
+    <div class="widget-setting-group">
+    <div class="widget-setting-label">
+      <p> Device name</p>
+    </div>
+    <div class="widget-setting">
+      <input class="form-control">
+    </div>
+    <div class="right-setting">
+      <p> Device name</p>
+    </div>
+  </div>
+      <div class="widget-setting-group">
+        <div class="widget-setting-label">
+      <p>Device Token</p>
+    </div>
+    <div class="widget-setting">
+      <p> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
 
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+  </div>
+  <div class="right-setting-show">
+        <button type="button" class="btn btn-primary">Get another</button>
+  </div>
+  </div>
+
+  <p> [Variables information] </p>
+  <p> [Diagnostic information] </p>
+
+  </div>
+</body>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/flat-ui.js"></script>
-
-<script src="../js/control-panels.js"></script>
