--- a/html/new-control-panel.html
+++ b/html/new-control-panel.html
@@ -26,18 +26,29 @@
           <li><a href="#contact">Docs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li ><a href="./">Login</a></li>
-          <li><a href="../navbar-fixed-top/">Register</a></li>
+          <li ><a href="profile.html">Anton Eremin</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
     <div class="content">
-    <h1>Control panels</h1>
-    <div class="panels">
-      <a href="#" class="panel">
-        <h2>+</h2>
+      <div class="bar">
+        <a href="controlpanels.html">
+        <button type="button" class="btn btn-primary no-show">Back</button>
       </a>
+        <div class="title">
+      <h1>Control Panels</h1>
+    </div>
+      <div class="control-buttons">
+        <a href="new-control-panel.html">
+        <button type="button" class="btn btn-primary no-show "> New Control Panel</button>
+      </a>
+      <a href="edit-controlpanel.html">
+        <button type="button" class="btn btn-primary no-show">Edit</button>
+      </a>
+      </div>
+    </div>
+    <div class="panels">
       <a href="#" class="panel">
         <input class="form-control" placeholder="New Control Panel">
       </a>
