--- a/html/login.html
+++ b/html/login.html
@@ -31,10 +31,10 @@
   <div class="content">
 
     <p> Login/Register with </p>
-    <a href="controlpanels.html"> Facebook</a>
-    <a href="controlpanels.html"> Google</a>
-    <a href="controlpanels.html"> Github </a>
-    <a href="controlpanels.html"> Email </a>
+    <a href="controlpanels-empty.html"> Facebook</a>
+    <a href="controlpanels-empty.html"> Google</a>
+    <a href="controlpanels-empty.html"> Github </a>
+    <a href="controlpanels-empty.html"> Email </a>
 
 
 
