--- a/html/controlpanel.html
+++ b/html/controlpanel.html
@@ -41,7 +41,7 @@
     <div class="content">
     <div class="bar">
       <a href="controlpanels.html">
-      <button type="button" class="btn btn-primary">Back</button>
+      <button type="button" class="btn btn-primary no-visible">Back</button>
     </a>
       <div class="title">
     <h1>Sample control panel</h1>
@@ -56,7 +56,7 @@
     </div>
   </div>
     <div class="panels">
-      <a href="widget-chart-settings.html" class="longwidget">
+      <a href="#" class="longwidget">
         <h2>Chart</h2>
       </a>
       <a href="#" class="widget">
