--- a/html/device.html
+++ b/html/device.html
@@ -48,32 +48,76 @@
     </a>
     </div>
   </div>
-    <div class="widget-setting-group">
-    <div class="widget-setting-label">
-      <p> Device name</p>
-    </div>
-    <div class="widget-setting">
-      <input class="form-control">
-    </div>
-    <div class="right-setting">
-      <p> Device name</p>
-    </div>
+  <div class="widget-setting-group">
+  <div class="widget-setting-label">
+    <p>Name</p>
   </div>
-      <div class="widget-setting-group">
-        <div class="widget-setting-label">
-      <p>Device Token</p>
-    </div>
-    <div class="widget-setting">
-      <p> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
+  <div class="widget-setting">
+    <p>My First Device</p>
+  </div>
+  <div class="right-setting">
+      <p>Name</p>
+  </div>
+</div>
+<div class="status">
+<div class="widget-setting-group">
+<div class="widget-setting-label">
+  <p> Status</p>
+</div>
+<div class="widget-setting">
+  <p>Connected</p>
 
-  </div>
-  <div class="right-setting-show">
-        <button type="button" class="btn btn-primary">Get another</button>
-  </div>
-  </div>
+</div>
+<div class="right-setting-show">
+  <p>2 minutes ago 192.168.1.10</p>
+  <p></p>
+</div>
+</div>
+</div>
+<div class="widget-setting-group">
+  <div class="widget-setting-label">
+<p>Device Token</p>
+</div>
+<div class="widget-setting">
+<p> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
 
-  <p> [Variables information] </p>
-  <p> [Diagnostic information] </p>
+</div>
+<div class="right-setting-show">
+    <button type="button" class="btn btn-primary">Get another</button>
+</div>
+</div>
+<div class="widget-setting-group">
+<div class="widget-setting-label">
+  <p>Variables</p>
+</div>
+<div class="widget-setting">
+    <div class="data-unit">
+      <p>Songs: 34</p>
+      <h6>5:30am 6/30</h6>
+    </div>
+    <div class="data-unit">
+      <p>Temp: 22</p>
+      <h6>1:33am 7/11</h6>
+    </div>
+</div>
+<div class="right-setting">
+    <p>Variables</p>
+</div>
+</div>
+<div class="widget-setting-group">
+<div class="widget-setting-label">
+  <p>Diagnostic Information</p>
+</div>
+<div class="widget-setting">
+</div>
+<div class="right-setting">
+    <p>Diagnostic Information</p>
+</div>
+</div>
+
+
+
+
 
   </div>
 </body>
