--- a/html/edit-controlpanel.html
+++ b/html/edit-controlpanel.html
@@ -50,27 +50,34 @@
     </div>
   </div>
     <div class="panels">
-      <a href="#" class="longwidget">
+      <a href="widget-chart-settings.html" class="longwidget">
+        <span class="glyphicon glyphicon-remove" ></span>
         <input class="form-control" placeholder="Chart">
         <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
-      <a href="#" class="widget">
+      <a href="widget-gauge-settings.html" class="widget">
+        <span class="glyphicon glyphicon-remove" ></span>
         <input class="form-control" placeholder="Gauge">
               <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
-      <a href="#" class="widget">
+      <a href="widget-string-settings.html" class="widget">
+        <span class="glyphicon glyphicon-remove" ></span>
         <input class="form-control" placeholder="String">
             <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+
       </a>
-      <a href="#" class="widget">
+      <a href="widget-slider-settings.html" class="widget">
+        <span class="glyphicon glyphicon-remove" ></span>
         <input class="form-control" placeholder="Slider">
               <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
-      <a href="#" class="widget">
+      <a href="widget-number-settings.html" class="widget">
+        <span class="glyphicon glyphicon-remove" ></span>
         <input class="form-control" placeholder="Number">
               <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
-      <a href="#" class="widget">
+      <a href="widget-switch-settings.html" class="widget">
+        <span class="glyphicon glyphicon-remove" ></span>
         <input class="form-control" placeholder="Switch">
             <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
       </a>
