--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
         </button>
-        <a class="navbar-brand" href="#">Cloud4RPI</a>
+        <a class="navbar-brand" href="landing.html">Cloud4RPI</a>
       </div>
       <div class="navbar-collapse collapse">
 
@@ -31,10 +31,10 @@
   <div class="content">
 
     <p> Login/Register with </p>
-    <a href="controlpanels-empty.html"> Facebook</a>
-    <a href="controlpanels-empty.html"> Google</a>
-    <a href="controlpanels-empty.html"> Github </a>
-    <a href="controlpanels-empty.html"> Email </a>
+    <a href="new-device-first.html"> Facebook</a>
+    <a href="new-device-first.html"> Google</a>
+    <a href="new-device-first.html"> Github </a>
+    <a href="new-device-first.html"> Email </a>
 
 
 
