--- a/html/devices.html
+++ b/html/devices.html
@@ -17,7 +17,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
         </button>
-        <a class="navbar-brand" href="#">Cloud4RPI</a>
+        <a class="navbar-brand" href="landing.html">Cloud4RPI</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -44,7 +44,7 @@
         <button type="button" class="btn btn-primary">New Device</button>
       </a>
       <a href="edit-devices.html"
-        <button type="button" class="btn btn-primary">Edit</button>
+        <button type="button" class="btn btn-primary no-show">Edit</button>
       </a>
       </div>
     </div>
