--- a/html/controlpanel.html
+++ b/html/controlpanel.html
@@ -57,7 +57,7 @@
   </div>
     <div class="panels">
       <a href="#" class="longwidget">
-        <h2>Chart</h2>
+        <h5>Wind Speed</h5>
       </a>
       <a href="#" class="widget">
         <h5>Gauge</h5>
