--- a/html/device.html
+++ b/html/device.html
@@ -83,10 +83,10 @@
 
 </div>
 <div class="right-setting-show">
-    <button type="button" class="btn btn-primary">Get another</button>
+    <a>Get another</a>
 </div>
 </div>
-<div class="widget-setting-group">
+<div class="widget-setting-group" id="variables">
 <div class="widget-setting-label">
   <p>Variables</p>
 </div>
@@ -97,6 +97,14 @@
     </div>
     <div class="data-unit">
       <p>Temp: 22</p>
+      <h6>10:13am 7/11</h6>
+    </div>
+    <div class="data-unit">
+      <p>Distance: 36</p>
+      <h6>9:02am 7/10</h6>
+    </div>
+    <div class="data-unit">
+      <p>Wind Speed: 2</p>
       <h6>1:33am 7/11</h6>
     </div>
 </div>
@@ -104,11 +112,27 @@
     <p>Variables</p>
 </div>
 </div>
-<div class="widget-setting-group">
+<div class="widget-setting-group" id="diagnostic">
 <div class="widget-setting-label">
   <p>Diagnostic Information</p>
 </div>
 <div class="widget-setting">
+  <div class="data-unit">
+    <p>CPU: 24%</p>
+    <h6>10:33am 7/11</h6>
+  </div>
+  <div class="data-unit">
+    <p>IP: 192.168.11.3</p>
+    <h6>1:33am 7/11</h6>
+  </div>
+  <div class="data-unit">
+    <p>Wind Speed: 2</p>
+    <h6>1:33am 7/11</h6>
+  </div>
+  <div class="data-unit">
+    <p>Hostname: Raspberrypi</p>
+    <h6>1:33am 7/11</h6>
+  </div>
 </div>
 <div class="right-setting">
     <p>Diagnostic Information</p>
