--- a/html/new-device-first.html
+++ b/html/new-device-first.html
@@ -84,7 +84,7 @@
 
 </div>
 <div class="right-setting-show">
-      <button type="button" class="btn btn-primary">Get another</button>
+      <a>Get another</a>
 </div>
 </div>
 </div>
