--- a/html/widget-gauge-settings.html
+++ b/html/widget-gauge-settings.html
@@ -50,17 +50,6 @@
     </div>
   </div>
     <div class="widget-setting-group">
-    <div class="widget-setting-label">
-      <p> Widget name</p>
-    </div>
-    <div class="widget-setting">
-      <input class="form-control">
-    </div>
-    <div class="right-setting">
-      <p> Widget name</p>
-    </div>
-  </div>
-      <div class="widget-setting-group">
         <div class="widget-setting-label">
       <p>Variables</p>
     </div>
@@ -93,7 +82,31 @@
     <p> Variables</p>
   </div>
   </div>
+  <div class="special">
+  <div class="widget-setting-group">
+    <div class="widget-setting-label">
+      <p>Min Value </p>
+  </div>
+  <div class="widget-setting">
+  <input class="form-control">
+  </div>
+  <div class="right-setting">
+  <p> Min Value</p>
+  </div>
+  </div>
+  <div class="widget-setting-group">
+  <div class="widget-setting-label">
+    <p>Max Value </p>
+  </div>
+  <div class="widget-setting">
+  <input class="form-control">
+  </div>
+  <div class="right-setting">
+  <p> Max Value</p>
+  </div>
+  </div>
 
+  </div>
 
 <a href="controlpanel.html"
   <button type="button" class="btn btn-success">Save</button>
