--- a/html/controlpanel.html
+++ b/html/controlpanel.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Control Panels</title>
+    <title>Sample Control Panel</title>
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
 
     <!-- Loading Bootstrap -->
@@ -48,7 +48,7 @@
   </div>
     <div class="control-buttons">
       <a href="new-widget.html">
-      <button type="button" class="btn btn-primary">Add Widget</button>
+      <button type="button" class="btn btn-primary no-show">Add Widget</button>
     </a>
     <a href="edit-controlpanel.html"
       <button type="button" class="btn btn-primary">Edit</button>
@@ -125,10 +125,10 @@ formatter: function(value) {
         $("[name='my-checkbox']").bootstrapSwitch();
         $("[name='my-checkbox']").click(function() {
           if($("[name='my-checkbox']").is(":checked")){
-            $("#status").html("sending: On");
+            $("#status").html("sending: Correct");
             console.log("On");
           } else {
-            $("#status").html("sending: Off");
+            $("#status").html("sending: Incorrect");
           }
         });
 
