--- a/html/devices-empty.html
+++ b/html/devices-empty.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Control panels</title>
+    <title>Devices</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Loading Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -21,8 +21,8 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="controlpanels.html">Control Panels</a></li>
-          <li><a href="devices.html">Devices</a></li>
+          <li ><a href="controlpanels.html">Control Panels</a></li>
+          <li class="active"><a href="devices.html">Devices</a></li>
           <li><a href="#contact">Docs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -37,19 +37,19 @@
         <button type="button" class="btn btn-primary no-show">Back</button>
       </a>
         <div class="title">
-      <h1>Control Panels</h1>
+      <h1>Devices</h1>
     </div>
       <div class="control-buttons">
-        <a href="new-control-panel.html">
-        <button type="button" class="btn btn-primary "> New Control Panel</button>
+        <a href="new-device.html">
+        <button type="button" class="btn btn-primary">New Device</button>
       </a>
-      <a href="edit-controlpanel.html">
+      <a href="edit-devices.html"
         <button type="button" class="btn btn-primary no-show">Edit</button>
       </a>
       </div>
     </div>
-    <p id="slightly-left"> You don't have any control panel yet. Try creating a new one! </p>
-  </div>
+      <p id="slightly-left"> You don't have any devices yet. Try connecting one! </p>
+    </div>
 </body>
 
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
