--- a/html/edit-controlpanel.html
+++ b/html/edit-controlpanel.html
@@ -35,7 +35,7 @@
     <div class="content">
     <div class="bar">
       <a href="controlpanels.html">
-      <button type="button" class="btn btn-primary">Back</button>
+      <button type="button" class="btn btn-primary no-show">Back</button>
     </a>
       <div class="title">
     <h1>Sample control panel</h1>
@@ -51,35 +51,41 @@
   </div>
     <div class="panels">
       <a href="widget-chart-settings.html" class="longwidget">
-        <span class="glyphicon glyphicon-remove" ></span>
-        <input class="form-control" placeholder="Chart">
-        <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+        <span class="glyphicon glyphicon-cog" id="settings"></span>
+        <input class="form-control" placeholder="Wind Speed">
+        <span class="glyphicon glyphicon-remove" id="delete"></span>
+
       </a>
       <a href="widget-gauge-settings.html" class="widget">
-        <span class="glyphicon glyphicon-remove" ></span>
+        <span class="glyphicon glyphicon-cog" id="settings" ></span>
         <input class="form-control" placeholder="Gauge">
-              <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+        <span class="glyphicon glyphicon-remove" id="delete"></span>
+
       </a>
       <a href="widget-string-settings.html" class="widget">
-        <span class="glyphicon glyphicon-remove" ></span>
+        <span class="glyphicon glyphicon-cog" id="settings"></span>
         <input class="form-control" placeholder="String">
-            <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+        <span class="glyphicon glyphicon-remove" id="delete"></span>
+
 
       </a>
       <a href="widget-slider-settings.html" class="widget">
-        <span class="glyphicon glyphicon-remove" ></span>
+        <span class="glyphicon glyphicon-cog" id="settings"></span>
         <input class="form-control" placeholder="Slider">
-              <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+        <span class="glyphicon glyphicon-remove" id="delete"></span>
+
       </a>
       <a href="widget-number-settings.html" class="widget">
-        <span class="glyphicon glyphicon-remove" ></span>
+        <span class="glyphicon glyphicon-cog" id="settings"></span>
         <input class="form-control" placeholder="Number">
-              <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+        <span class="glyphicon glyphicon-remove" id="delete" ></span>
+
       </a>
       <a href="widget-switch-settings.html" class="widget">
-        <span class="glyphicon glyphicon-remove" ></span>
+        <span class="glyphicon glyphicon-cog" id="settings"></span>
         <input class="form-control" placeholder="Switch">
-            <img src="http://1.bp.blogspot.com/-YWPI1_P-q0M/UzEIJFV_bEI/AAAAAAAAq3c/ee8q-4Vcxbw/s1600/++++++++++aaaa1.png" width="30px" height="30px"></img>
+        <span class="glyphicon glyphicon-remove" id="delete"></span>
+
       </a>
     </div>
   </div>
