--- a/html/device.html
+++ b/html/device.html
@@ -48,6 +48,7 @@
     </a>
     </div>
   </div>
+  <div class="panel">
   <div class="widget-setting-group">
   <div class="widget-setting-label">
     <p>Name</p>
@@ -86,6 +87,8 @@
     <a>Get another</a>
 </div>
 </div>
+</div>
+<div class="panel">
 <div class="widget-setting-group" id="variables">
 <div class="widget-setting-label">
   <p>Variables</p>
@@ -112,6 +115,8 @@
     <p>Variables</p>
 </div>
 </div>
+</div>
+<div class="panel">
 <div class="widget-setting-group" id="diagnostic">
 <div class="widget-setting-label">
   <p>Diagnostic Information</p>
@@ -138,8 +143,11 @@
     <p>Diagnostic Information</p>
 </div>
 </div>
-
-
+</div>
+<div class="danger-box">
+  <p>Permamently delete this device</p>
+  <button type="button" class="btn btn-danger">Delete</button>
+</div>
 
 
 
