--- a/html/edit-controlpanel.html
+++ b/html/edit-controlpanel.html
@@ -88,6 +88,10 @@
 
       </a>
     </div>
+    <div class="danger-box">
+      <p>Permamently delete this control panel</p>
+      <button type="button" class="btn btn-danger">Delete</button>
+    </div>
   </div>
 </body>
 
