--- a/html/new-device-first.html
+++ b/html/new-device-first.html
@@ -53,40 +53,34 @@
     </div>
   </div>
 <div class="settings">
-    <div class="widget-setting-group">
-    <div class="widget-setting-label">
-      <p>Name</p>
-    </div>
-    <div class="widget-setting">
-      <p>My First Device</p>
-    </div>
-    <div class="right-setting">
-        <p>Name</p>
-    </div>
+  <div class="widget-setting-group">
+  <div class="widget-setting-label">
+    <p>Name</p>
   </div>
+  <div class="widget-setting">
+    <p>My First Device</p>
+  </div>
+</div>
   <div class="widget-setting-group">
   <div class="widget-setting-label">
     <p> Status</p>
   </div>
   <div class="widget-setting">
     <p>Not Connected</p>
+
   </div>
-  <div class="right-setting">
-      <p>Status</p>
   </div>
-</div>
-  <div class="widget-setting-group">
-    <div class="widget-setting-label">
-  <p>Device Token</p>
+<div class="widget-setting-group" >
+  <div class="widget-setting-label">
+<p>Device Token</p>
 </div>
 <div class="widget-setting">
-  <p> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
+<p id="below"> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
+<a> Get Another</a>
 
 </div>
-<div class="right-setting-show">
-      <a>Get another</a>
 </div>
-</div>
+<hr>
 </div>
 <div class="text">
   <p> To connect a new device, you can get Ctrlpnl   client library on one of the following platforms: </p>
