--- a/html/device.html
+++ b/html/device.html
@@ -48,7 +48,6 @@
     </a>
     </div>
   </div>
-  <div class="panel">
   <div class="widget-setting-group">
   <div class="widget-setting-label">
     <p>Name</p>
@@ -56,39 +55,28 @@
   <div class="widget-setting">
     <p>My First Device</p>
   </div>
-  <div class="right-setting">
-      <p>Name</p>
-  </div>
 </div>
-<div class="status">
 <div class="widget-setting-group">
 <div class="widget-setting-label">
   <p> Status</p>
 </div>
 <div class="widget-setting">
   <p>Connected</p>
+  <p id="gray">2 minutes ago 192.168.1.10</p>
 
 </div>
-<div class="right-setting-show">
-  <p>2 minutes ago 192.168.1.10</p>
-  <p></p>
 </div>
-</div>
-</div>
-<div class="widget-setting-group">
+<div class="widget-setting-group" >
   <div class="widget-setting-label">
 <p>Device Token</p>
 </div>
 <div class="widget-setting">
-<p> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
+<p id="below"> d1b43970-8a0c-4a40-b569-126e346a5db3 </p>
+<a> Get Another</a>
 
 </div>
-<div class="right-setting-show">
-    <a>Get another</a>
 </div>
-</div>
-</div>
-<div class="panel">
+<hr>
 <div class="widget-setting-group" id="variables">
 <div class="widget-setting-label">
   <p>Variables</p>
@@ -115,8 +103,7 @@
     <p>Variables</p>
 </div>
 </div>
-</div>
-<div class="panel">
+<hr>
 <div class="widget-setting-group" id="diagnostic">
 <div class="widget-setting-label">
   <p>Diagnostic Information</p>
@@ -141,7 +128,6 @@
 </div>
 <div class="right-setting">
     <p>Diagnostic Information</p>
-</div>
 </div>
 </div>
 <div class="danger-box">
