--- a/html/controlpanels.html
+++ b/html/controlpanels.html
@@ -44,7 +44,7 @@
         <button type="button" class="btn btn-primary "> New Control Panel</button>
       </a>
       <a href="edit-controlpanels.html">
-        <button type="button" class="btn btn-primary">Edit</button>
+        <button type="button" class="btn btn-primary no-show">Edit</button>
       </a>
       </div>
     </div>
