--- a/html/new-control-panel.html
+++ b/html/new-control-panel.html
@@ -2,13 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Control panels</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample Control Panel</title>
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+
     <!-- Loading Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Loading Flat UI -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet">
-    <link href="../css/control-panels-styles.css" rel="stylesheet">
+    <!-- Loading bootstrap-switch -->
+    <link href="../bootstrap-switch/bootstrap-switch.css" rel="stylesheet">
+      <link href="../bootstrap-slider/bootstrap-slider.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+      <script src="../bootstrap-switch/bootstrap-switch.js" ></script>
+      <script src="../bootstrap-slider/bootstrap-slider.js" ></script>
 
 <body>
   <div class="navbar navbar-default navbar-static-top" role="navigation">
@@ -17,7 +24,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
         </button>
-        <a class="navbar-brand" href="landing.html">Cloud4RPI</a>
+        <a class="navbar-brand" href="#">Cloud4RPI</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -32,62 +39,109 @@
     </div>
   </div>
     <div class="content">
-      <div class="bar">
-        <a href="controlpanels.html">
-        <button type="button" class="btn btn-primary no-show">Back</button>
-      </a>
-        <div class="title">
-      <h1>Control Panels</h1>
+    <div class="bar">
+      <a href="controlpanels.html">
+      <button type="button" class="btn btn-primary no-visible">Back</button>
+    </a>
+      <div class="title">
+    <h1>Sample control panel</h1>
+  </div>
+    <div class="control-buttons">
+      <a href="new-widget.html">
+      <button type="button" class="btn btn-primary no-show">Add Widget</button>
+    </a>
+    <a href="edit-controlpanel.html"
+      <button type="button" class="btn btn-primary">Edit</button>
+    </a>
     </div>
-      <div class="control-buttons">
-        <a href="new-control-panel.html">
-        <button type="button" class="btn btn-primary no-show "> New Control Panel</button>
-      </a>
-      <a href="edit-controlpanel.html">
-        <button type="button" class="btn btn-primary no-show">Edit</button>
-      </a>
-      </div>
-    </div>
+  </div>
     <div class="panels">
-      <a href="#" class="panel">
-        <input class="form-control" placeholder="New Control Panel">
+      <a href="#" class="longwidget">
+        <h5>Wind Speed</h5>
       </a>
-      <a href="controlpanel.html" class="panel">
-        <h5>Sample Control Panel</h5>
-        <h6>3/12/2016</h6>
+      <a href="#" class="widget">
+        <h5>Gauge</h5>
+        <div class="widget-footer">
+          <p> 4:25pm 6/20</p>
+        </div>
       </a>
-      <a href="#" class="panel">
-        <h5>Garage</h5>
-        <h6>4/05/2016</h6>
+      <a href="#" class="widget">
+        <div class="widget-head">
+        <h5>String</h5>
+        <h4 id="string_value">run</h4>
+      </div>
+      <div class="widget-body">
+      <input class="form-control">
+
+    </div>
+    <div class="widget-footer">
+      <p> 4:25pm 6/20</p>
+    </div>
       </a>
-      <a href="#" class="panel">
-        <h5>Countryhouse</h5>
-        <h6>1/23/2015</h6>
+      <a href="#" class="widget">
+        <div class="widget-head">
+        <h5>Slider</h5>
+        <h4 id="slider_value">45</h4>
+      </div>
+      <div class="widget-body">
+      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-value="45"/>
+      <script type="text/javascript">
+      $('#ex1').slider({
+formatter: function(value) {
+  $('#ex1').on('slide',function () {
+    document.getElementById("slider_value").style.fontSize = "20pt";
+    document.getElementById("slider_value").style.color = "#e2e2e2"
+    document.getElementById("slider_value").textContent = "Sending:" + value;
+    setTimeout(function() {
+      document.getElementById("slider_value").style.fontSize = "20pt";
+      document.getElementById("slider_value").style.color = "#16a085"
+      document.getElementById("slider_value").textContent = value;
+  }, 2000);
+
+
+});
+
+  return 'Current value: ' + value;
+}
+});
+
+</script>
+    </div>
+    <div class="widget-footer">
+      <p> 4:25pm 6/20</p>
+    </div>
       </a>
-      <a href="#" class="panel">
-        <h5>Brewery</h5>
-        <h6>2/14/2016</h6>
+      <a href="#" class="widget">
+        <h5>Number</h5>
       </a>
-      <a href="#" class="panel">
-        <h5>Treehouse</h5>
-        <h6>2/15/2016</h6>
-      </a>
-      <a href="#" class="panel">
-        <h5>Dogsuit</h5>
-        <h6>4/16/2016</h6>
-      </a>
-      <a href="#" class="panel">
-        <h5>Catsuit</h5>
-        <h6>5/14/2016</h6>
+      <a href="#" class="widget">
+        <div class="widget-head">
+        <h5>Switch</h5>
+        <h4 id="switch_value">On</h4>
+      </div>
+      <div class="widget-body">
+      <input type="checkbox" id="checkbox-toggle" name="my-checkbox" checked>
+      <script type="text/javascript">
+        $("[name='my-checkbox']").bootstrapSwitch();
+        $("[name='my-checkbox']").click(function() {
+          if($("[name='my-checkbox']").is(":checked")){
+            $("#status").html("sending: Correct");
+            console.log("On");
+          } else {
+            $("#status").html("sending: Incorrect");
+          }
+        });
+
+      </script>
+    </div>
+    <div class="widget-footer">
+      <p>6/20/2016</p>
+    </div>
       </a>
     </div>
   </div>
 </body>
 
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/js/flat-ui.js"></script>
-
-<script src="../js/control-panels.js"></script>
