--- a/html/new-control-panel.html
+++ b/html/new-control-panel.html
@@ -44,7 +44,7 @@
       <button type="button" class="btn btn-primary no-visible">Back</button>
     </a>
       <div class="title">
-    <h1>Sample control panel</h1>
+    <input class="form-control" placeholder="New Control Panel" autofocus="autofocus">
   </div>
     <div class="control-buttons">
       <a href="new-widget.html">
@@ -55,90 +55,14 @@
     </a>
     </div>
   </div>
-    <div class="panels">
-      <a href="#" class="longwidget">
-        <h5>Wind Speed</h5>
-      </a>
-      <a href="#" class="widget">
-        <h5>Gauge</h5>
-        <div class="widget-footer">
-          <p> 4:25pm 6/20</p>
-        </div>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>String</h5>
-        <h4 id="string_value">run</h4>
-      </div>
-      <div class="widget-body">
-      <input class="form-control">
-
-    </div>
-    <div class="widget-footer">
-      <p> 4:25pm 6/20</p>
-    </div>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>Slider</h5>
-        <h4 id="slider_value">45</h4>
-      </div>
-      <div class="widget-body">
-      <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-value="45"/>
-      <script type="text/javascript">
-      $('#ex1').slider({
-formatter: function(value) {
-  $('#ex1').on('slide',function () {
-    document.getElementById("slider_value").style.fontSize = "20pt";
-    document.getElementById("slider_value").style.color = "#e2e2e2"
-    document.getElementById("slider_value").textContent = "Sending:" + value;
-    setTimeout(function() {
-      document.getElementById("slider_value").style.fontSize = "20pt";
-      document.getElementById("slider_value").style.color = "#16a085"
-      document.getElementById("slider_value").textContent = value;
-  }, 2000);
-
-
-});
-
-  return 'Current value: ' + value;
-}
-});
-
-</script>
-    </div>
-    <div class="widget-footer">
-      <p> 4:25pm 6/20</p>
-    </div>
-      </a>
-      <a href="#" class="widget">
-        <h5>Number</h5>
-      </a>
-      <a href="#" class="widget">
-        <div class="widget-head">
-        <h5>Switch</h5>
-        <h4 id="switch_value">On</h4>
-      </div>
-      <div class="widget-body">
-      <input type="checkbox" id="checkbox-toggle" name="my-checkbox" checked>
-      <script type="text/javascript">
-        $("[name='my-checkbox']").bootstrapSwitch();
-        $("[name='my-checkbox']").click(function() {
-          if($("[name='my-checkbox']").is(":checked")){
-            $("#status").html("sending: Correct");
-            console.log("On");
-          } else {
-            $("#status").html("sending: Incorrect");
-          }
-        });
-
-      </script>
-    </div>
-    <div class="widget-footer">
-      <p>6/20/2016</p>
-    </div>
-      </a>
-    </div>
+  <div class="panels">
+  <div class="notification" id="control-panel">
+    <p> It feels lonely here. Let's add some widgets!</p>
+    <a href="new-widget.html">
+    <button type="button" class="btn btn-primary">Add Widget</button>
+  </a>
+  </div>
+</div>
   </div>
 </body>
 
