--- a/html/new-control-panel.html
+++ b/html/new-control-panel.html
@@ -55,7 +55,7 @@
     </a>
     </div>
   </div>
-  <div class="panels">
+  <div class="centered-content">
   <div class="notification" id="control-panel">
     <p> It feels lonely here. Let's add some widgets!</p>
     <a href="new-widget.html">
