--- a/html/register.html
+++ b/html/register.html
@@ -28,16 +28,31 @@
     </div>
   </div>
   <div class="content">
-    <div class="container" id="promo-main">
-    <p> How it works: sensors & actuators communicate with control panel elements via client on your device [picture illustrating it]. 2 minute setup. </p>
-    <a href="register.html">
-    <button type="button" class="btn btn-primary">Sign up</button>
-  </a>
+    <div class="register-header">
+    <p> Sign up </p>
+    <a href="new-device-first.html"> [Facebook icon]</a>
+    <a href="new-device-first.html"> [Google icon]</a>
+    <a href="new-device-first.html"> [Twitter icon] </a>
+    <a href="new-device-first.html"> [Github icon] </a>
   </div>
-  <div class="content">
-    <div class="container" id="promo-main">
-    <p> Use cases: brewery and incubator cases </p>
+    <div class="register-container">
+    <div class="widget-setting-group">
+    <div class="widget-setting-label">
+      <p>Email</p>
+    </div>
+    <div class="widget-setting">
+      <input class="form-control">
+    </div>
   </div>
+  <div class="widget-setting-group">
+  <div class="widget-setting-label">
+    <p>Password</p>
+  </div>
+  <div class="widget-setting">
+    <input class="form-control">
+  </div>
+</div>
+</div>
 
 
 
