--- a/html/controlpanels.html
+++ b/html/controlpanels.html
@@ -52,31 +52,33 @@
 
       <a href="controlpanel.html" class="panel">
         <h5>Sample Control Panel</h5>
-        <p>3/12/2016</p>
+        <p id="green">3/12/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Garage</h5>
-        <p>4/05/2016</p>
+        <p id="green">4/05/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Countryhouse</h5>
         <p>1/23/2015</p>
+        <p class="status" id="yellow">timeout</p>
       </a>
       <a href="#" class="panel">
         <h5>Brewery</h5>
         <p>2/14/2016</p>
+        <p class="status" id="red"> not responding</p>
       </a>
       <a href="#" class="panel">
         <h5>Treehouse</h5>
-        <p>2/15/2016</p>
+        <p id="green">2/15/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Dogsuit</h5>
-        <p>4/16/2016</p>
+        <p id="green">4/16/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Catsuit</h5>
-        <p>5/14/2016</p>
+        <p id="green">5/14/2016</p>
       </a>
     </div>
   </div>
