--- a/html/devices.html
+++ b/html/devices.html
@@ -51,31 +51,34 @@
     <div class="panels">
       <a href="device.html" class="panel">
         <h5>Sample Device</h5>
-        <p>4/5/2016</p>
+        <p id="green">4/5/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Garage Unit</h5>
-        <p>4/05/2016</p>
+        <p id="green">4/05/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Home Unit</h5>
-        <p>2/5/2016</p>
+        <p id="green">2/5/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Brewery</h5>
-        <p>2/5/2016</p>
+        <p id="green">2/3/2016</p>
       </a>
       <a href="#" class="panel">
         <h5>Test unit</h5>
-        <p>2/5/2016</p>
+        <p >1/14/2016</p>
+        <p class="status" id="red">not responding</p>
       </a>
       <a href="#" class="panel">
         <h5>Meteorological Station</h5>
-        <p>7/11/2016</p>
+        <p id="yellow">7/11/2016</p>
+        <p class="status" id="yellow">timeout</p>
       </a>
       <a href="#" class="panel">
         <h5>Security Unit</h5>
         <p>3/18/2016</p>
+        <p class="status" id="red">not responding</p>
       </a>
     </div>
   </div>
